# ai_runtime

./: Cargo.toml  README.md  makefile  runtime.toml
.github/workflows/: ci.yml
docs/: README.md  architecture.md  config.md  examples.md
src/: batcher.rs  lib.rs  main.rs  pipeline.rs  python.rs  types.rs  worker.rs
src/engine/: mod.rs  onnx.rs  tensorflow.rs  tensorrt.rs  torch.rs
src/scripting/: plugins.rs
src/storage/: redis_store.rs
