[package]
name = "omniengine"
version = "0.1.0"
edition = "2021"

[lib]
name = "omniengine"
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ndarray = "0.16"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
redis = { version = "0.23", features = ["tokio-comp"] }
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
ort = { version = "2.0.0-rc.10", features = ["download-binaries", "ndarray"] }

[dependencies.pyo3]
version = "0.20"
features = ["extension-module"]

[build-dependencies]
pyo3-build-config = "0.20"