[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ndarray = "0.16"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
redis = { version = "0.27", features = ["tokio-comp"] }
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }

# Backends (optional)
ort = { version = "2.0.0-rc.10", features = ["download-binaries", "ndarray"], optional = true }
tensorrt-rs = { version = "0.3.0", optional = true }
tch = { version = "0.14", optional = true }

# Python-Bindings (optional)
pyo3 = { version = "0.20", features = ["extension-module"], optional = true }

[build-dependencies]
pyo3-build-config = "0.20"

[features]
default = ["onnx"]
onnx = ["ort"]
tensorrt = ["tensorrt-rs"]
onnx-cuda = ["onnx", "ort/cuda"] 
torch = ["tch"]
python = ["pyo3"]

all = ["onnx", "tensorrt", "python", "onnx-cuda", "torch", "python"]


[lib]
name = "omniengine"
crate-type = ["cdylib", "rlib"]

[package]
name = "omniengine"
version = "0.1.0"
edition = "2021"

[package.metadata.maturin]
name = "omniengine"
